--- a/Style Guide/css/specific-pages.css
+++ b/Style Guide/css/specific-pages.css
@@ -503,21 +503,34 @@ a .friend-img:hover{
 	width:100%;
 }
 
+#latest-news{
+/*	border:1px solid blue;*/
+	padding-left:0;
+	padding-right:0;
+}
+
 #current-news{
 	text-align:left;
+/*	border: 1px solid red;*/
+
 }
 
 #current-news ul{
 	list-style:none;
-	padding:0;
-	margin:0 1em 0 0;
-	/*border:1px solid black;*/
+	padding:0 2em;
+	margin: 0;
+	/*background:red;*/
+/*	border:1px solid black*/;
 }
 
 .news-item{
 	border: 4px solid #EFEFEF;
 	padding: .8em 1em;
-	margin: 0 0 2.5em 0;
+	margin-bottom: 2.5em;
+	background:white;
+	/*margin-right: 2em;*/
+	/*margin-left: 2em;*/
+
 }
 
 .news-img{
